Making text wrap when needed (typically mobile) to avoid layout breaking.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,6 +35,10 @@ body {
   position: relative; /* AVOIDS HEADER OVERLAP */
 }
 
+h1, h2, h3, h4, h5, h6 {
+  word-break: break-word;
+}
+
 h5, h6 {
   font-family: inherit;
 }
