--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -97,7 +97,7 @@ section.issues {
   .profession {
   }
   .bio {
-    font-size: 0.85em;
+    font-size: 0.9em;
     margin-top: 0.25em;
     line-height: 1.6em;
     word-break:break-word;
